--- a/build.gradle
+++ b/build.gradle
@@ -64,9 +64,9 @@ ext {
     mockito = "2.28.2"
     coroutine = "1.3.1"
     appcompat = "1.1.0"
-    fragment = "1.2.4"
-    material = "1.2.0-alpha06"
-    constraint = "2.0.0-beta4"
+    fragment = "1.2.5"
+    material = "1.2.0-beta01"
+    constraint = "2.0.0-beta7"
     recyclerview = "1.1.0"
     cardio = "5.5.1"
 
