--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -31,9 +31,10 @@ apply plugin: 'com.google.firebase.appdistribution'
 buildscript {
     repositories {
         google()
+        jcenter()
     }
     dependencies {
-        classpath 'com.google.firebase:firebase-appdistribution-gradle:1.3.1'
+        classpath 'com.google.firebase:firebase-appdistribution-gradle:2.0.0'
     }
 }
 
