--- a/payjp-android-verifier/build.gradle
+++ b/payjp-android-verifier/build.gradle
@@ -57,6 +57,7 @@ android {
 
     buildFeatures {
         buildConfig = false
+        viewBinding = true
     }
 }
 
@@ -67,10 +68,10 @@ dependencies {
     implementation "androidx.fragment:fragment:$fragment"
     implementation "androidx.appcompat:appcompat:$appcompat"
     implementation "androidx.recyclerview:recyclerview:$recyclerview"
+    implementation "androidx.lifecycle:lifecycle-common-java8:$lifecycle"
     implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle"
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle"
-    kapt "androidx.lifecycle:lifecycle-common-java8:$lifecycle"
     implementation "com.google.android.material:material:$material"
     implementation "androidx.constraintlayout:constraintlayout:$constraint"
 
