--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -23,7 +23,6 @@
 
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
-apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
 
 apply plugin: 'com.google.firebase.appdistribution'
@@ -82,6 +81,10 @@ android {
     dexOptions {
         // Skip pre-dexing when running on CI or when disabled via -Dpre-dex=false.
         preDexLibraries = preDexEnabled && !isCi
+    }
+
+    buildFeatures {
+        viewBinding = true
     }
 }
 
