--- a/payjp-android-core/build.gradle
+++ b/payjp-android-core/build.gradle
@@ -33,8 +33,8 @@ apply from: rootProject.file("gradle/android-common.gradle")
 
 android {
     defaultConfig {
-        versionName VERSION_NAME
         consumerProguardFiles 'consumer-proguard-rules.pro'
+        buildConfigField "String", "VERSION_NAME", "\"$VERSION_NAME\""
     }
 
     androidExtensions {
