--- a/build.gradle
+++ b/build.gradle
@@ -31,7 +31,7 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:4.1.0'
-        classpath 'com.google.gms:google-services:4.3.3'
+        classpath 'com.google.gms:google-services:4.3.4'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
@@ -79,10 +79,10 @@ ext {
     lifecycle = "2.2.0"
     mockito = "2.28.2"
     coroutine = "1.3.7"
-    appcompat = "1.1.0"
+    appcompat = "1.2.0"
     fragment = "1.2.5"
-    material = "1.2.0-beta01"
-    constraint = "2.0.0-beta7"
+    material = "1.2.1"
+    constraint = "2.0.2"
     recyclerview = "1.1.0"
     cardio = "5.5.1"
 
