--- a/payjp-android-core/build.gradle
+++ b/payjp-android-core/build.gradle
@@ -23,8 +23,8 @@
 
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
-apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
+apply plugin: 'kotlin-parcelize'
 apply plugin: 'org.jetbrains.dokka'
 
 apply from: rootProject.file('gradle/gradle-mvn-push.gradle')
@@ -37,9 +37,6 @@ android {
         buildConfigField "String", "VERSION_NAME", "\"$VERSION_NAME\""
     }
 
-    androidExtensions {
-        features = ["parcelize"]
-    }
     buildFeatures {
         buildConfig = true
     }
